allow to communicate with vps api
